--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,27 @@
+
 body {
     background-color: rgb(2, 2, 78);
     font-family: "noto sans";
     color: white;
+}
+
+#logo {
+    font-size: 70px;
+    text-align: center;
+    padding: 0px;
+    margin-top: 8%;
+    margin-bottom: 6%;
+    font-family: "noto sans";
+    text-shadow: 4px 4px 5px rgb(200, 20, 100)
+}
+
+@keyframes color-border {
+  0%   { border-color: #28eeee; }
+  20%  { border-color: #2eeb31; }
+  40%  { border-color: #e2e60e; }
+  60%  { border-color: #ddb60a; }
+  80%  { border-color: #2eeb31; }
+  100% { border-color: #28eeee; }
 }
 
 #welcome {
@@ -13,8 +33,10 @@ body {
     text-align: center;
     width: 25%;
     margin: 0 auto;
-    margin-top: 20%;
     border-radius: 5px;
+    border-width: 3px;
+    border-style: solid;
+    animation: color-border 2s infinite linear;
 }
 
 #welcome:hover {
@@ -27,9 +49,9 @@ body {
 }
 
 #main-game {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(3, auto);
+    display: none;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     background-color: rgb(90, 90, 90);
     border-radius: 5px;
     width: 50%;
@@ -37,10 +59,20 @@ body {
     height: 400px;
 }
 
+.game-section {
+    margin: 6px;
+    padding: 6px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+
 #game-header {
     background-color: orange;
     grid-column: 1 / 4;
     grid-row: 1 / 2;
+    
 }
 
 #game-figure {
@@ -49,12 +81,14 @@ body {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     color: red;
+    
 }
 
 #game-info {
     background-color: blue;
     grid-column: 2 / 4;
     grid-row: 2 / 3;
+    
 }
 
 #game-attempts {
@@ -70,4 +104,20 @@ body {
 
 #game-giveup {
     background-color: green;
+    
+}
+
+footer {
+    font-size: 10px;
+    background-color: rgb(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    bottom: 0%; /*makes sure it stays at the bottom*/
+    height: 15%;
+    left: 0%; /*along with right: 0%, to prevent overflowing */
+    right: 0%;
 }
