--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,10 @@ body {
     background-color: rgb(20, 20, 20);
 }
 
+#game-replay {
+    display: none;
+}
+
 footer {
     font-size: 10px;
     background-color: rgb(0,0,0,0.2);
