--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
     background-color: rgb(2, 2, 78);
     font-family: "noto sans";
     color: white;
+    background-image: url(../images/city-skyline.png);
+    background-repeat: repeat-x;
+    background-position: center top;
 }
 
 .language-option {
@@ -89,7 +92,7 @@ body {
     grid-row: 1 / 2;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 #game-header-status {
@@ -98,12 +101,12 @@ body {
 
 .game-parameter {
     color: rgb(180, 180, 180);
+    margin: 15px;
 }
 
 #game-settings {
     cursor: pointer;
     text-align: right;
-    flex: end;
 }
 
 #game-settings:hover {
