--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,15 @@ body {
     display: none;
 }
 
+#main-lost {
+    display: none;
+    font-size: 50px;
+    margin: 0 auto;
+    margin-top: 10%;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
 footer {
     font-size: 10px;
     background-color: rgb(0,0,0,0.2);
