--- a/css/styles.css
+++ b/css/styles.css
@@ -162,15 +162,109 @@ body {
     color: white;
 }
 
-#game-figure {
-    background-color: white;
-    text-align: center;
+#game-figure-wrapper {
+    background-color: black;
+    font-weight: bold;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    color: red;
     border: solid black 3px;
     
 }
+
+#game-figure {
+    margin: 0 auto;
+    width: 50%;
+    height: 80%;
+    display: grid;
+    grid-template-columns: auto 10% 1% 10%;
+    grid-template-rows: repeat(4, fr);
+}
+
+.frame {
+    background-color: white;
+    margin: 0 auto;
+}
+
+.part {
+    background-color: black;
+    margin: 0 auto;
+    color: black;
+}
+
+
+#game-figure-pole-h {
+    display: block;
+    width: 100%;
+    height: 10px;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    margin-right: -40%;
+}
+
+#game-figure-pole-v {
+    display: block;
+    height: 100%;
+    width: 10%;
+    grid-column: 1 / 2;
+    grid-row: 1 / 5;
+}
+
+#game-figure-rope {
+    color: white;
+    width: 400%;
+    height: 100%;
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    margin-left: -300%;
+}
+
+
+#game-figure-head {
+    width: 24px;
+    border-radius: 50%;
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    margin-left: -900%;
+}
+#game-figure-torso {
+    height: 100%;
+    width: 500%;
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    margin-left: -400%; /*manually centered*/
+}
+
+.right-stick {
+    transform: rotate(-30deg);
+    transform-origin: left;
+}
+
+.left-stick {
+    transform: rotate(210deg);
+    transform-origin: left;
+}
+
+#game-figure-leftarm {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+}
+
+#game-figure-rightarm {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+}
+
+#game-figure-leftleg {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+
+#game-figure-rightleg {
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+}
+
 
 #game-info {
     background-color: rgb(0,0,0,0.5);
