--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ body {
     margin-top: 10%;
     margin-bottom: 5%;
     border-radius: 5px;
+    box-shadow: 2px 2px 5px 2px rgb(0,0,0,0.3);
 }
 
 #custom-options {
@@ -117,9 +118,10 @@ body {
     background-color: rgb(90, 90, 90, 0.0); /* transparent */
     border-radius: 5px;
     width: 50%;
+    margin: 0 auto;
     margin-top: 5%;
     height: 400px;
-    border: solid white 1px;
+    box-shadow: 2px 2px 20px 2px rgb(0,0,0,0.5);
 }
 
 .game-section {
@@ -138,6 +140,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 #game-header-status {
@@ -286,23 +290,44 @@ body {
     cursor: pointer;
 }
 
+
+#game-decisions {
+    background-color: rgb(10, 10, 10);
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 10px;  
+}
+
 .game-option {
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(200, 20, 100);
     color: white;
+    font-size: 20px;
     text-align: center;
     cursor: pointer;
+    width: 48%;
 }
 
 .game-option:hover {
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(180, 0, 70);
 }
 
 .game-option:active {
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(200, 20, 100);
 }
 
-#game-replay {
+#game-replay, #game-back {
     display: none;
+}
+
+.option-left {
+    border-bottom-left-radius: 10px;
+}
+
+.option-right {
+    border-bottom-right-radius: 10px;
 }
 
 #main-lost {
