--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,15 @@ body {
     grid-row: 1 / 5;
 }
 
+#game-figure-pole-base {
+    display: block;
+    height: 20%;
+    width: 40%;
+    margin-top: 40%;
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+}
+
 #game-figure-rope {
     color: white;
     width: 400%;
