--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,12 @@ body {
 
 #main-menu {
     display: none;
+    width: 20%;
 }
 
 .menu {
     background-color: rgb(200, 20, 100);
     color: white;
-    font-family: "candara";
     padding: 20px;
     font-size: 30px;
     text-align: center;
@@ -54,10 +54,12 @@ body {
     border-width: 3px;
     border-style: solid;
     animation: color-border 2s infinite linear;
+    box-shadow: 2px 2px 20px 2px rgb(0,0,0,0.5);
 }
 
 #menu-mode {
     display: flex;
+    font-size: 24px;
     justify-content: space-evenly;
 }
 
@@ -67,7 +69,7 @@ body {
 
 #menu-quick {
     background-color: rgb(241, 65, 145);
-    border-bottom: solid 2px white;
+    border-radius: 5px;
 }
 
 #menu-start {
@@ -81,7 +83,7 @@ body {
 
 #custom-options {
     display: none;
-    font-size: 24px;
+    font-size: 20px;
     margin-top: 5%;
 }
 
@@ -99,6 +101,10 @@ body {
 
 #menu-start:active {
     background-color: rgb(2,2,78)
+}
+
+#main-welcome {
+    box-shadow: 2px 2px 20px 2px rgb(0,0,0,0.5);
 }
 
 #main-welcome:hover {
@@ -144,7 +150,33 @@ body {
     border-top-right-radius: 10px;
 }
 
-#game-header-status {
+#game-info {
+    background-color: rgb(0,0,0,0.5);
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0,1fr));
+    grid-template-rows: repeat(3, minmax(0,1fr));
+}
+
+#game-info-wrongs {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+#game-info-attempts {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+#game-info-hints {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+#game-info-status {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
     color: rgb(200, 20, 100);
 }
 
@@ -276,14 +308,6 @@ body {
 #game-figure-rightleg {
     grid-column: 4 / 5;
     grid-row: 4 / 5;
-}
-
-
-#game-info {
-    background-color: rgb(0,0,0,0.5);
-    grid-column: 2 / 4;
-    grid-row: 2 / 3;
-    
 }
 
 #game-attempts {
